docs: document Maven Central coordinates for 0.1.0
Replace the "no releases yet" notice with Maven and Gradle install
snippets in the README and user-guide installation page, link to the
artifact on central.sonatype.com, and note the JVM `--add-opens` flag
that Arrow needs. Keep the build-from-source instructions for users on
platforms without a bundled native library or who want unreleased
changes.